--- a/index.html
+++ b/index.html
@@ -63,17 +63,16 @@
   <button onclick="revealCard()">🎁 Open Your Gift</button>
 
   <div class="card" id="birthdayCard">
-    <img src="https://chat.openai.com/mnt/data/birthday_image.png" alt="Birthday Girl">
+    <img src="https://imgur.com/a/xiwEDKC" alt="Happy July 13th,Onty <3">
     <h2>Happy Birthday, Kak Ieke 🎉</h2>
     <p>
-      Thirteen July, the world grew softer.<br>
-      You've grown with grace, held onto truth,<br>
-      and shaped the light within you.<br>
-      May peace and beauty follow you always.
+      Thirteen July, your name feels warm.<br>
+      A soul still kind, a heart still strong.,<br>
+     This day is yours. This life is too.<br>
+      The world is better because of you.
     </p>
     <audio controls autoplay loop>
-      <source src="https://chat.openai.com/mnt/data/july_13th_song.mp3" type="audio/mp3">
-      Your browser does not support the audio element.
+      <source src="https://filebin.net/8vec8q8gutuylnhl" type="audio/mp3">
     </audio>
   </div>
 
