--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <button onclick="revealCard()">🎁 Open Your Gift</button>
 
   <div class="card" id="birthdayCard">
-    <img src="https://imgur.com/a/xiwEDKC" alt="Happy July 13th,Onty <3">
+    <img src="<blockquote class="imgur-embed-pub" lang="en" data-id="a/xiwEDKC" data-context="false" ><a href="//imgur.com/a/xiwEDKC"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>" alt="Happy July 13th,Onty <3">
     <h2>Happy Birthday, Kak Ieke 🎉</h2>
     <p>
       Thirteen July, your name feels warm.<br>
@@ -72,7 +72,7 @@
       The world is better because of you.
     </p>
     <audio controls autoplay loop>
-      <source src="https://filebin.net/8vec8q8gutuylnhl" type="audio/mp3">
+      <source src="https://filebin.net/8vec8q8gutuylnhl/July%2013th.mp3" type="audio/mp3">
     </audio>
   </div>
 
