--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <button onclick="revealCard()">🎁 Open Your Gift</button>
 
   <div class="card" id="birthdayCard">
-    <img src="https://imgur.com/w0qCsww.png" alt="Happy July 13th,Onty <3">
+    <img src="https://i.imgur.com/w0qCsww.jpeg" alt="Happy July 13th,Onty <3">
     <h2>Happy Birthday, Kak Ieke 🎉</h2>
     <p>
       Thirteen July, your name feels warm.<br>
