--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </style>
 </head>
 <body>
-  <button onclick="revealCard()">🎁 Open Your Gift</button>
+  <button onclick="revealCard()">🎁 Klik disini Ontyy!!</button>
 
   <div class="card" id="birthdayCard">
     <img src="https://i.imgur.com/w0qCsww.jpeg" alt="Happy July 13th,Onty <3">
@@ -72,8 +72,8 @@
       The world is better because of you.
     </p>
     <audio controls autoplay loop>
-      <source src="https://filebin.net/8vec8q8gutuylnhl/July%2013th.mp3">
-    </audio>
+      <source src="https://filebin.net/8vec8q8gutuylnhl/July%2013th.mp3" type="audio/mp3">
+      Your browser does not support the audio element.
   </div>
 
   <script>
